# developer-joyofenergy-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
.github/workflows/: ci.yml  cmake.yml
rest/: CMakeLists.txt  configuration.h  generator.h  listener.h  logger.h  router.h  server.cpp  server.h  session.h
rest/controller/: CMakeLists.txt  MeterReadingController.h  PricePlanComparatorController.h
rest/domain/: CMakeLists.txt  ElectricityReading.h  MeterReadings.h  PricePlan.h
rest/service/: CMakeLists.txt  ElectricityReadingService.h  MeterReadingService.h  PricePlanService.h
test/: CMakeLists.txt  EndpointTest.h  ReadingTest.cpp  RestClient.h  readings.cpp
test/controller/: CMakeLists.txt  MeterReadingControllerTest.cpp  PricePlanComparatorControllerTest.cpp
test/domain/: CMakeLists.txt  PricePlanTest.cpp
test/service/: CMakeLists.txt  MeterReadingServiceTest.cpp  PricePlanServiceTest.cpp
